--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/framework": "^5.0.7",
     "@adonisjs/ignitor": "^2.0.6",
     "@adonisjs/lucid": "^5.0.4",
+    "got": "^9.6.0",
     "pg": "^7.4.3"
   },
   "devDependencies": {},
